# korzennik

./: .env.example  .gitignore  README.md
backend/: korzennik.db-shm  korzennik.db-wal  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: discovery.py  gedcom.py  persons.py  relationships.py  search.py  tree.py
backend/app/matching/: date_parser.py  engine.py  normalization.py  phonetic.py  places.py  polish.py  similarity.py
backend/app/models/: __init__.py  person.py  relationship.py  search_result.py
backend/app/schemas/: person.py  relationship.py  search.py  tree.py
backend/app/services/: auto_discovery.py  confidence.py  gedcom_service.py  search_orchestrator.py  tree_builder.py
backend/app/sources/: ancestry.py  base.py  billiongraves.py  castle_garden.py  ellisisland.py  familysearch.py  findagrave.py  geneanet.py  geneteka.py  jri_poland.py  metryki.py  myheritage.py  poznan_project.py  scraper_base.py  szukaj.py  wikitree.py  yad_vashem.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: discovery.ts  persons.ts  relationships.ts  search.ts  tree.ts
frontend/src/components/layout/: Header.tsx  MainLayout.tsx
frontend/src/components/persons/: PersonCard.tsx  PersonDetail.tsx  PersonForm.tsx
frontend/src/hooks/: useDiscovery.ts  usePersons.ts  useSearch.ts  useTree.ts
frontend/src/pages/: PersonsPage.tsx  SearchPage.tsx  TreePage.tsx
frontend/src/styles/: globals.css
frontend/src/types/: person.ts  relationship.ts  search.ts  tree.ts
(+8 files in other folders)
