[project]
name = "korzennik"
version = "0.1.0"
description = "Automated genealogy tree builder with Polish source support"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite",
    "alembic",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx",
    "selectolax",
    "jellyfish",
    "python-gedcom",
    "python-multipart",
    "tenacity",
    "unidecode",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
